// ClipIQ Database Schema (DBML)
// Generated: 2025-12-30
// Database: PostgreSQL with UUID primary keys

// =============================================
// Core Tables
// =============================================

Table users {
  id UUID [pk, default: `gen_random_uuid()`, note: 'Unique user identifier']
  username VARCHAR(50) [unique, not null, note: 'Unique username for display and @ mentions']
  email VARCHAR(255) [unique, not null, note: 'Email for password recovery and notifications']
  role VARCHAR(20) [not null, default: 'user', note: "User role: 'admin', 'staff', 'user'"]
  password VARCHAR(255) [not null, note: 'Bcrypt hashed password']
  banned BOOLEAN [default: false, note: 'Whether user is currently banned']
  ban_expiry TIMESTAMP [null, note: 'Ban expiration timestamp (NULL = permanent)']
  ban_reason TEXT [null, note: 'Reason for ban (shown to user)']
  warnings INTEGER [default: 0, note: 'Number of warnings received (0-3)']
  is_demoted BOOLEAN [default: false, note: 'Flag for demoted staff (cannot access staff features)']
  display_name VARCHAR(100) [null, note: 'Display name (can be changed)']
  bio TEXT [null, note: 'User biography/description']
  avatar_url VARCHAR(500) [null, note: 'Avatar image URL from MinIO S3']
  created_at TIMESTAMP [default: `CURRENT_TIMESTAMP`]
  updated_at TIMESTAMP [default: `CURRENT_TIMESTAMP`]

  indexes {
    username
    email
    role
    (banned, ban_expiry) [name: 'idx_users_banned_expiry', where: 'banned = TRUE']
    is_demoted [name: 'idx_users_is_demoted', where: "role = 'staff'"]
    created_at
  }
}

Table videos {
  id UUID [pk, default: `gen_random_uuid()`, note: 'UUID identifier for the video']
  title VARCHAR(255) [not null]
  description TEXT [null]
  uploader_id UUID [not null, ref: > users.id, note: 'UUID of the uploader']
  thumbnail_url VARCHAR(500) [null, note: 'Thumbnail image URL from MinIO S3']
  video_url VARCHAR(500) [not null, note: 'Video file URL/key in MinIO S3']
  duration INTEGER [note: 'Video duration in seconds']
  views INTEGER [default: 0, note: 'Total view count']
  likes_count INTEGER [default: 0, note: 'Cached like count']
  comments_count INTEGER [default: 0, note: 'Cached comment count']
  shares_count INTEGER [default: 0, note: 'Cached share count']
  status VARCHAR(20) [default: 'active', note: "Video status: 'active', 'deleted', 'flagged'"]
  processing_status VARCHAR(20) [default: 'processing', note: "Processing status: 'processing', 'ready', 'failed'"]
  upload_date TIMESTAMP [default: `CURRENT_TIMESTAMP`]
  created_at TIMESTAMP [default: `CURRENT_TIMESTAMP`]
  updated_at TIMESTAMP [default: `CURRENT_TIMESTAMP`]

  indexes {
    uploader_id
    upload_date [type: btree, note: 'DESC']
    views [type: btree, note: 'DESC']
    likes_count [type: btree, note: 'DESC']
    comments_count [type: btree, note: 'DESC']
    shares_count [type: btree, note: 'DESC']
    status
    processing_status
  }
}

Table comments {
  id UUID [pk, default: `gen_random_uuid()`]
  video_id UUID [not null, ref: > videos.id, note: 'Video being commented on']
  user_id UUID [not null, ref: > users.id, note: 'User who made the comment']
  parent_id UUID [null, ref: > comments.id, note: 'Parent comment ID for nested replies (NULL = top-level)']
  text TEXT [not null, note: 'Comment content']
  edited BOOLEAN [default: false, note: 'Whether comment was edited']
  created_at TIMESTAMP [default: `CURRENT_TIMESTAMP`]
  updated_at TIMESTAMP [default: `CURRENT_TIMESTAMP`]

  indexes {
    video_id
    user_id
    parent_id
    created_at [type: btree, note: 'DESC']
  }
}

Table likes {
  id UUID [pk, default: `gen_random_uuid()`]
  user_id UUID [not null, ref: > users.id, note: 'User who liked the video']
  video_id UUID [not null, ref: > videos.id, note: 'Video that was liked']
  created_at TIMESTAMP [default: `CURRENT_TIMESTAMP`]

  indexes {
    user_id
    video_id
    created_at [type: btree, note: 'DESC']
    (user_id, video_id) [unique, name: 'unique_user_video_like']
  }
}

// =============================================
// Content Moderation & Reports
// =============================================

Table user_reports {
  id UUID [pk, default: `gen_random_uuid()`]
  reported_user_id UUID [not null, ref: > users.id, note: 'User being reported']
  reported_by_id UUID [not null, ref: > users.id, note: 'User who submitted the report']
  reason TEXT [not null, note: 'Reason for report']
  evidence_url VARCHAR(500) [null, note: 'Optional evidence (screenshot, link)']
  status VARCHAR(20) [default: 'pending', note: "'pending', 'reviewed', 'resolved'"]
  reviewed_by_id UUID [null, ref: > users.id, note: 'Staff/admin who reviewed']
  reviewed_at TIMESTAMP [null]
  resolution_note TEXT [null]
  created_at TIMESTAMP [default: `CURRENT_TIMESTAMP`]

  indexes {
    status
    reported_user_id
    reported_by_id
    created_at [type: btree, note: 'DESC']
  }
}

Table video_reports {
  id UUID [pk, default: `gen_random_uuid()`]
  video_id UUID [not null, ref: > videos.id, note: 'Video being reported']
  reported_by_id UUID [not null, ref: > users.id, note: 'User who submitted the report']
  reason TEXT [not null, note: 'Reason for report']
  evidence_url VARCHAR(500) [null, note: 'Optional evidence']
  status VARCHAR(20) [default: 'pending', note: "'pending', 'reviewed', 'resolved'"]
  reviewed_by_id UUID [null, ref: > users.id, note: 'Staff/admin who reviewed']
  reviewed_at TIMESTAMP [null]
  resolution_note TEXT [null]
  created_at TIMESTAMP [default: `CURRENT_TIMESTAMP`]

  indexes {
    status
    video_id
    reported_by_id
    created_at [type: btree, note: 'DESC']
  }
}

Table comment_reports {
  id UUID [pk, default: `gen_random_uuid()`]
  comment_id UUID [not null, ref: > comments.id, note: 'Comment being reported']
  reported_by_id UUID [not null, ref: > users.id, note: 'User who submitted the report']
  reason TEXT [not null, note: 'Type of violation with optional details']
  evidence_url VARCHAR(500) [null]
  status VARCHAR(20) [default: 'pending', note: "'pending', 'reviewed', 'resolved'"]
  reviewed_by_id UUID [null, ref: > users.id]
  reviewed_at TIMESTAMP [null]
  resolution_note TEXT [null]
  created_at TIMESTAMP [default: `CURRENT_TIMESTAMP`]

  indexes {
    status
    comment_id
    reported_by_id
    created_at [type: btree, note: 'DESC']
    (comment_id, reported_by_id) [unique, name: 'idx_comment_reports_unique_report', where: "status IN ('pending', 'reviewed')"]
  }
}

Table appeals {
  id UUID [pk, default: `gen_random_uuid()`]
  user_id UUID [not null, ref: > users.id, note: 'User submitting the appeal']
  reason TEXT [not null, note: 'Appeal reason/explanation']
  status VARCHAR(20) [default: 'pending', note: "'pending', 'approved', 'denied'"]
  reviewed_by_id UUID [null, ref: > users.id]
  reviewed_at TIMESTAMP [null]
  resolution_note TEXT [null]
  created_at TIMESTAMP [default: `CURRENT_TIMESTAMP`]

  indexes {
    status
    user_id
    created_at [type: btree, note: 'DESC']
  }
}

// =============================================
// Social Features
// =============================================

Table subscriptions {
  id UUID [pk, default: `gen_random_uuid()`]
  follower_id UUID [not null, ref: > users.id, note: 'User who is following (subscriber)']
  following_id UUID [not null, ref: > users.id, note: 'User being followed (content creator)']
  created_at TIMESTAMP [default: `CURRENT_TIMESTAMP`]

  indexes {
    follower_id
    following_id
    created_at [type: btree, note: 'DESC']
    (follower_id, following_id) [unique, name: 'unique_follower_following']
  }
}

Table notifications {
  id UUID [pk, default: `gen_random_uuid()`]
  type VARCHAR(50) [not null, note: "'new_video', 'new_comment', 'new_like', 'new_subscriber', 'video_flagged', 'ban_warning', 'ban_appeal_resolved'"]
  receiver_id UUID [not null, ref: > users.id, note: 'User who receives the notification']
  actor_id UUID [null, ref: > users.id, note: 'User who triggered (NULL for system)']
  video_id UUID [null, ref: > videos.id, note: 'Related video (if applicable)']
  comment_id UUID [null, ref: > comments.id, note: 'Related comment (if applicable)']
  message TEXT [null, note: 'Optional custom notification message']
  read BOOLEAN [default: false, note: 'Whether notification has been read']
  created_at TIMESTAMP [default: `CURRENT_TIMESTAMP`]

  indexes {
    receiver_id
    type
    read
    created_at [type: btree, note: 'DESC']
    (receiver_id, read) [name: 'idx_notifications_receiver_unread', where: 'read = FALSE']
  }
}

Table shares {
  id UUID [pk, default: `gen_random_uuid()`]
  user_id UUID [null, ref: > users.id, note: 'User who shared (NULL for anonymous)']
  video_id UUID [not null, ref: > videos.id, note: 'Video that was shared']
  share_type VARCHAR(50) [not null, note: "'link', 'facebook', 'twitter', 'whatsapp', 'embed', etc."]
  created_at TIMESTAMP [default: `CURRENT_TIMESTAMP`]

  indexes {
    user_id [where: 'user_id IS NOT NULL']
    video_id
    share_type
    created_at [type: btree, note: 'DESC']
    (video_id, created_at) [name: 'idx_shares_video_created']
  }
}

// =============================================
// Playlists & Saved Videos
// =============================================

Table playlists {
  id UUID [pk, default: `gen_random_uuid()`]
  user_id UUID [not null, ref: > users.id, note: 'Playlist owner']
  name VARCHAR(255) [not null]
  description TEXT [null]
  visibility VARCHAR(20) [default: 'public', note: "'public', 'unlisted', 'private'"]
  created_at TIMESTAMP [default: `CURRENT_TIMESTAMP`]
  updated_at TIMESTAMP [default: `CURRENT_TIMESTAMP`]

  indexes {
    user_id
    visibility
    created_at [type: btree, note: 'DESC']
  }
}

Table playlist_videos {
  id UUID [pk, default: `gen_random_uuid()`]
  playlist_id UUID [not null, ref: > playlists.id]
  video_id UUID [not null, ref: > videos.id]
  position INTEGER [not null, note: 'Position in playlist (for ordering)']
  added_at TIMESTAMP [default: `CURRENT_TIMESTAMP`]

  indexes {
    playlist_id
    video_id
    (playlist_id, position)
    (playlist_id, video_id) [unique, name: 'unique_playlist_video']
  }
}

// =============================================
// Analytics & Tracking
// =============================================

Table view_history {
  id UUID [pk, default: `gen_random_uuid()`]
  user_id UUID [not null, ref: > users.id, note: 'User who watched']
  video_id UUID [not null, ref: > videos.id, note: 'Video watched']
  watch_duration INTEGER [note: 'Seconds watched']
  completed BOOLEAN [default: false, note: 'Whether user watched entire video']
  impression_id UUID [null, ref: > impressions.id, note: 'Related impression (for tracking)']
  created_at TIMESTAMP [default: `CURRENT_TIMESTAMP`]

  indexes {
    user_id
    video_id
    (user_id, video_id)
    impression_id
    created_at [type: btree, note: 'DESC']
  }
}

Table impressions {
  id UUID [pk, default: `gen_random_uuid()`]
  user_id UUID [not null, ref: > users.id]
  video_id UUID [not null, ref: > videos.id]
  session_id UUID [not null, note: 'Client session identifier']
  position INTEGER [not null, note: 'Position in feed']
  source TEXT [not null, note: "'personal', 'trending', 'random'"]
  model_version TEXT [null, note: 'Recommendation model version']
  shown_at TIMESTAMP [default: `CURRENT_TIMESTAMP`]

  indexes {
    (user_id, shown_at) [name: 'idx_impr_user_time', type: btree, note: 'DESC']
    (user_id, session_id) [name: 'idx_impr_user_session']
  }
}

// =============================================
// System & Administration
// =============================================

Table system_settings {
  key VARCHAR(100) [pk, note: 'Setting key (unique identifier)']
  value TEXT [not null, note: 'Setting value (stored as text)']
  description TEXT [null, note: 'Human-readable description']
  updated_at TIMESTAMP [default: `CURRENT_TIMESTAMP`]

  Note: 'Key-value store for global configuration. Default keys: maintenance_mode, service_maintenance_mode, app_version, max_video_size_mb, max_upload_per_day, max_video_duration_minutes'
}

Table system_logs {
  id UUID [pk, default: `gen_random_uuid()`]
  action_type VARCHAR(50) [not null, note: "'user_banned', 'staff_promoted', 'maintenance_toggle', etc."]
  performed_by_id UUID [null, ref: > users.id, note: 'Admin/staff who performed action']
  target_user_id UUID [null, ref: > users.id, note: 'User affected (if applicable)']
  target_video_id UUID [null, ref: > videos.id, note: 'Video affected (if applicable)']
  details TEXT [null, note: 'Human-readable description']
  metadata JSONB [null, note: 'Additional structured data (JSON)']
  created_at TIMESTAMP [default: `CURRENT_TIMESTAMP`]

  indexes {
    action_type
    performed_by_id
    target_user_id
    target_video_id
    created_at [type: btree, note: 'DESC']
  }
}

// =============================================
// Relationship Notes
// =============================================

// users 1--* videos (uploader)
// users 1--* comments (author)
// users *--* videos (via likes)
// users *--* videos (via view_history)
// users *--* users (via subscriptions - self-referencing)
// videos 1--* comments
// videos *--* playlists (via playlist_videos)
// playlists 1--* playlist_videos
// users 1--* playlists
// users 1--* notifications (receiver)
// users 1--* user_reports (reporter & reported)
// videos 1--* video_reports
// comments 1--* comment_reports
// users 1--* appeals
// users 1--* shares
// videos 1--* shares
// users 1--* impressions
// videos 1--* impressions
// impressions 1--* view_history
